WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288762
[WTF] Fix initialization of SequesteredImmortalHeap
https://bugs.webkit.org/show_bug.cgi?id=288762
Summary
[WTF] Fix initialization of SequesteredImmortalHeap
Marcus Plutowski
Reported
2025-02-27 14:46:35 PST
rdar://145788964
The current initialization allows for re-initialization, should move flag into cpp file
Attachments
Add attachment
proposed patch, testcase, etc.
Marcus Plutowski
Comment 1
2025-02-27 15:06:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41561
EWS
Comment 2
2025-02-27 19:12:54 PST
Committed
291289@main
(4738abe95a97): <
https://commits.webkit.org/291289@main
> Reviewed commits have been landed. Closing PR #41561 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug