[WTF] Fix initialization of SequesteredImmortalHeap rdar://145788964 https://bugs.webkit.org/show_bug.cgi?id=288762

Reviewed by Yusuke Suzuki and Yijia Huang.

Using LazyNeverDestroyed avoids the bespoke singleton code for now
(though eventually we will need a custom solution to handle the
sequestering constraint), and moving the once_flag to the cpp file
avoids duplication per TU.

* Source/WTF/wtf/SequesteredImmortalHeap.cpp:
(WTF::SequesteredImmortalHeap::instance):
* Source/WTF/wtf/SequesteredImmortalHeap.h:
(WTF::SequesteredImmortalHeap::instance): Deleted.
(WTF::SequesteredImmortalHeap::allocateAndInstall): Deleted.
(WTF::SequesteredImmortalHeap::getSlot): Deleted.
(WTF::SequesteredImmortalHeap::computeSlotIndex): Deleted.
(WTF::SequesteredImmortalHeap::scavenge): Deleted.
(WTF::SequesteredImmortalHeap::mapGranule): Deleted.
(WTF::SequesteredImmortalHeap::decommitGranule): Deleted.
(WTF::SequesteredImmortalHeap::SequesteredImmortalHeap): Deleted.
(WTF::SequesteredImmortalHeap::getUnchecked): Deleted.

Canonical link: https://commits.webkit.org/291289@main